# skeleton-sprint-dump

./: README.md
game/level-harness/: customLevel.txt  index.html  index.js
game/strip-alpha-channel/: Cargo.toml
game/strip-alpha-channel/src/: main.rs
levelbuilder/: README.md
levelbuilder/electron/: index.html  index.js  package-lock.json  package.json  rollup.config.js
levelbuilder/electron/dist-scripts/: skeleton-sprint-lvlbuilder.js
levelbuilder/electron/src/: SKSRenderer.js  main.js  sks-canvas.html  sks-main.html  sks-nav.html  sks-toolbar.html  store.js
levelbuilder/glfw/: CMakeLists.txt  main.cpp  utils.h
levelbuilder/glfw/include/: App.h  ResourceManager.h  Shader.h
levelbuilder/glfw/src/: ResourceManager.cpp
levelbuilder/nanogui/: CMakeLists.txt  levelbuilder.cpp
levelbuilder/rust/levelbuilder/: Cargo.toml
levelbuilder/rust/levelbuilder/src/: main.rs
levelbuilder/rust/sks-levelbuilder/: Cargo.toml  sui.rs
levelbuilder/rust/sks-levelbuilder/src/: main.rs  ui.rs
levelbuilder/rust/sks-levelbuilder/src/ui/: widget.rs
levelbuilder/rust/stretch-test-recurse/: Cargo.toml
levelbuilder/rust/stretch-test-recurse/src/: main.rs
levelbuilder/rust/test_ui/: Cargo.toml
levelbuilder/rust/test_ui/src/: main.rs  ui.rs
levelbuilder/rust/ui-test-druid/: Cargo.toml
levelbuilder/rust/ui-test-druid/src/: main.rs
levelbuilder/rust/ui-test-orbtk/: Cargo.toml
levelbuilder/rust/upscale-img/: release.bat
levelbuilder/sfml/: CMakeLists.txt  main.cpp
levelbuilder/sfml(old)/cmake/: 1.txt  CMakelists.txt
levelbuilder/sfml(old)/cmake/include/: Ball.h  BlockArray.h  Builder.h  Debug.h  Entity.h  FPSCounter.h  Game.h  ResourceManager.h  Toolbar.h
levelbuilder/sfml(old)/cmake/src/: Game.cpp  main.cpp
levelbuilder/sfml(old)/meson/: main.cpp  meson.build
levelbuilder/sfml(old)/meson/subprojects/one/: meson.build  one.cpp
levelbuilder/sfml(old)/meson/subprojects/one/include/: one.h
levelbuilder/sfml(old)/meson/subprojects/sfml/: meson.build
levelbuilder/sfml(old)/meson/subprojects/sfml/extlibs/: meson.build
levelbuilder/sfml(old)/meson/subprojects/sfml/extlibs/headers/mingw/: meson.build
levelbuilder/sfml(old)/meson/subprojects/sfml/src/SFML/: meson.build
levelbuilder/sfml(old)/meson/subprojects/sfml1/: meson.build
levelbuilder/sfml/ext/tinyfiledialogs/: hello.c  hello_wchar_t.c  readme displayed below (extract from header file).txt
levelbuilder/sfml/include/: App.h  BlockDefs.h  Board.h  EventManager.h  InputManager.h  ResourceManager.h  Titlebar.h  Toolbar.h
levelbuilder/sfml/src/: App.cpp  BlockDefs.cpp  Board.cpp  EventManager.cpp  InputManager.cpp  ResourceManager.cpp  Titlebar.cpp  Toolbar.cpp
levelbuilder/upscale-img/: Cargo.toml  release-run.bat
levelbuilder/upscale-img/src/: main.rs
