[package]
name = "ui-test"
version = "0.1.0"
authors = ["adumbidiot <nathaniel.daniel23@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/xi-editor/druid"}
druid-shell = {git = "https://github.com/xi-editor/druid"}